[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/hud/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/menu/GUIFrameBlue.png" type="Texture" id=2]

[node name="PauseMenu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_top = -500.0
margin_right = -150.0
margin_bottom = -750.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer"]
margin_right = 724.0
margin_bottom = 350.0
custom_constants/separation = 25
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer2"]
margin_left = 67.0
margin_right = 247.0
margin_bottom = 350.0

[node name="Resume" type="TextureButton" parent="MarginContainer/HBoxContainer2/CenterContainer"]
margin_top = 140.0
margin_right = 180.0
margin_bottom = 210.0
texture_normal = ExtResource( 2 )

[node name="ResumeLabel" type="Label" parent="MarginContainer/HBoxContainer2/CenterContainer/Resume"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Resume"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/HBoxContainer2"]
margin_left = 272.0
margin_right = 452.0
margin_bottom = 350.0

[node name="Restart" type="TextureButton" parent="MarginContainer/HBoxContainer2/CenterContainer2"]
margin_top = 140.0
margin_right = 180.0
margin_bottom = 210.0
texture_normal = ExtResource( 2 )

[node name="RestartLabel" type="Label" parent="MarginContainer/HBoxContainer2/CenterContainer2/Restart"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer3" type="CenterContainer" parent="MarginContainer/HBoxContainer2"]
margin_left = 477.0
margin_right = 657.0
margin_bottom = 350.0

[node name="MainMenu" type="TextureButton" parent="MarginContainer/HBoxContainer2/CenterContainer3"]
margin_top = 140.0
margin_right = 180.0
margin_bottom = 210.0
texture_normal = ExtResource( 2 )

[node name="MainMenuLabel" type="Label" parent="MarginContainer/HBoxContainer2/CenterContainer3/MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
text = " Main Menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/HBoxContainer2/CenterContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer2/CenterContainer2/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer2/CenterContainer3/MainMenu" to="." method="_on_MainMenu_pressed"]
